force-app/main/default/objects/CalculateDetail__c/CalculateDetail__c.object-meta.xml
<CustomObject>
    <label>精算明細</label>
    <nameField>
        <displayFormat>CD-{000000000}</displayFormat>
        <label>精算明細No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>