force-app/main/default/objects/CalculateDetail__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>金額</label>
    <length>255</length>
    <type>Text</type>
</CustomField>