force-app/main/default/objects/CalculateDetail__c/fields/BillingDestination__c.field-meta.xml
<CustomField>
    <fullName>BillingDestination__c</fullName>
    <label>請求先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>請求先1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>請求先2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>請求先3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>