force-app/main/default/objects/CalculateDetail__c/fields/BorrowerPay__c.field-meta.xml
<CustomField>
    <fullName>BorrowerPay__c</fullName>
    <label>借主負担額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>