force-app/main/default/objects/CalculateDetail__c/fields/BorrowerPayRate__c.field-meta.xml
<CustomField>
    <fullName>BorrowerPayRate__c</fullName>
    <formula>BorrowerPay__c /  (Quantity__c *  UnitPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>借主負担率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>