force-app/main/default/objects/CalculateDetail__c/fields/BorrowerPayTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>BorrowerPayTotalAmount__c</fullName>
    <formula>BorrowerPay__c +  BorrowerPayTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>借主負担総額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>