force-app/main/default/objects/CalculateDetail__c/fields/CalculateDetailExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>CalculateDetailExpenseItems__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>精算明細費目</label>
    <referenceTo>CalculateDetailExpenseItems__c</referenceTo>
    <relationshipLabel>精算明細</relationshipLabel>
    <relationshipName>CalculateDetailExpenseItems</relationshipName>
    <type>Lookup</type>
</CustomField>