force-app/main/default/objects/CalculateDetail__c/fields/CalculateDetailId__c.field-meta.xml
<CustomField>
    <fullName>CalculateDetailId__c</fullName>
    <externalId>true</externalId>
    <label>精算明細ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>