force-app/main/default/objects/CalculateDetail__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>費用項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>