force-app/main/default/objects/CalculateDetail__c/fields/ExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItems__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>費目</label>
    <referenceTo>ExpenseItem__c</referenceTo>
    <relationshipLabel>精算明細</relationshipLabel>
    <relationshipName>RelationExpenseItemCalculateDetail</relationshipName>
    <type>Lookup</type>
</CustomField>