force-app/main/default/objects/CalculateDetail__c/fields/LenderPayTax__c.field-meta.xml
<CustomField>
    <fullName>LenderPayTax__c</fullName>
    <label>貸主負担消費税</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>