force-app/main/default/objects/CalculateDetail__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>使用材料</label>
    <length>255</length>
    <type>Text</type>
</CustomField>