force-app/main/default/objects/CalculateDetail__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>場所・部位</label>
    <length>255</length>
    <type>Text</type>
</CustomField>