force-app/main/default/objects/CalculateDetail__c/fields/ResidentPayAmount__c.field-meta.xml
<CustomField>
    <fullName>ResidentPayAmount__c</fullName>
    <formula>IF( ResidentPayCheck__c = TRUE, BorrowerPay__c *1.1,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居者負担額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>