force-app/main/default/objects/CalculateDetail__c/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <label>（不要）税区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>外税10％</fullName>
            </value>
            <value>
                <fullName>外税8％</fullName>
            </value>
            <value>
                <fullName>内税10％</fullName>
            </value>
            <value>
                <fullName>内税8％</fullName>
            </value>
            <value>
                <fullName>非課税</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>