force-app/main/default/objects/CalculateDetail__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>単位</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>㎡</fullName>
            </value>
            <value>
                <fullName>個</fullName>
            </value>
            <value>
                <fullName>畳</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>