force-app/main/default/objects/CalculateDetail__c/fields/WorkContent__c.field-meta.xml
<CustomField>
    <fullName>WorkContent__c</fullName>
    <label>作業内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>