force-app/main/default/objects/CalculateDetail__c/validationRules/BorrowerPayOrver.validationRule-meta.xml
<ValidationRule>
    <fullName>BorrowerPayOrver</fullName>
    <active>true</active>
    <errorConditionFormula>BorrowerPay__c &gt;( UnitPrice__c * Quantity__c)</errorConditionFormula>
    <errorDisplayField>BorrowerPay__c</errorDisplayField>
    <errorMessage>借主負担の値が不正です。単価×数量 以下の値を記入してください。</errorMessage>
</ValidationRule>