force-app/main/default/objects/CalculateDetail__c/validationRules/InputTaxRate.validationRule-meta.xml
<ValidationRule>
    <fullName>InputTaxRate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(AND( NOT( ISNULL( Quantity__c ) ) , NOT( ISNULL( UnitPrice__c ) ) )  ,ISBLANK( TEXT(   TaxRate__c  ) ) )</errorConditionFormula>
    <errorDisplayField>TaxRate__c</errorDisplayField>
    <errorMessage>税率（％）を入力してください</errorMessage>
</ValidationRule>