force-app/main/default/objects/CalculateDetail__c/validationRules/OnlyEx.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyEx</fullName>
    <active>true</active>
    <errorConditionFormula>BEGINS(TEXT( TaxRate__c ) ,&quot;In&quot;)</errorConditionFormula>
    <errorDisplayField>TaxRate__c</errorDisplayField>
    <errorMessage>精算明細の税率は、外税（税抜価格）で入力してください。</errorMessage>
</ValidationRule>