force-app/main/default/objects/CalculateDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CancelCancelCalculate__c</columns>
    <columns>ExpenseItems__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>